# flexweave

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  Cargo.toml  README.md  RELEASING.md  oxfmt.config.ts  oxlint.config.ts  package.json  tsconfig.base.json
core/: CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md
core/docs/adr/: 0001-ability-lifecycle-cleanup-facts.md  0002-remove-attribute-policy-definitions.md  0003-synchronous-ability-core-boundary.md  0004-remove-core-ability-commit-timing.md  0005-roll-back-failed-ability-commits.md  0006-require-ability-commit-before-completion.md  0007-split-ability-gate-from-commit-action.md  0008-ability-commit-facts-carry-active-state.md  0009-ability-command-result-policy.md  0010-expose-explicit-ability-rollback.md
core/docs/models/: README.md
core/examples/: rpg_combat.rs
core/examples/rpg_combat/: abilities.rs
core/src/: ability.rs  attribute.rs  attribute_model.rs  clock.rs  data_store.rs  derived_attribute.rs  effect.rs  errors.rs  identity.rs  lib.rs  lifecycle.rs  mechanics.rs  object_lifecycle.rs  object_map.rs  query.rs  registry.rs  signal.rs  tag.rs
core/src/ability/: activation_request.rs  definition.rs  event_sink.rs  events.rs  hooks.rs  ids.rs  indexed_store.rs  lifecycle_transaction.rs  operation.rs  results.rs  store.rs
core/src/effect/: application.rs  definition.rs  events.rs  (+3 more)
core/tests/: abilities.rs  attributes.rs  effects.rs  errors.rs  lifecycle.rs  mechanics.rs  object_data_query.rs  object_destruction.rs  property_object_data_query.rs  property_tags.rs  signals.rs  surface.rs  tags.rs
(+270 files in other folders)
